--- a/Kapitel/02_App/03_Map/02_ViewModel/MapDisplayDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapDisplayDataProvider/main.tex
@@ -50,31 +50,31 @@ Keine.
 
 \subsubsection*{\texttt{+ getBuildingController() : MapLayerDataController}}\label{App_Map_ViewModel_getBuildingController}%$$$M
 \paragraph*{Beschreibung}
-Gibt den MapLayerDataController für die Gebäude-Ebene der Karte zurück.
+Gibt den \hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController} für die Gebäude-Ebene der Karte zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-\texttt{MapLayerDataController} für die Gebäude-Ebene der Karte.
+\hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController} für die Gebäude-Ebene der Karte.
 
 \subsubsection*{\texttt{+ getLevelController() : MapLayerDataController}}\label{App_Map_ViewModel_getLevelController}%$$$M
 \paragraph*{Beschreibung}
-Gibt den MapLayerDataController für die Etagen-Ebene auf der Karte zurück.
+Gibt den \hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController} für die Etagen-Ebene auf der Karte zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-\texttt{MapLayerDataController} für die Etagen-Ebene auf der Karte.
+\hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController} für die Etagen-Ebene auf der Karte.
 
 \subsubsection*{\texttt{+ getLevelChangeController() : LevelChangeController}}\label{App_Map_ViewModel_getLevelChangeController}%$$$M
 \paragraph*{Beschreibung}
-Gibt den LevelChangeControllers für den Etagenwechsel zurück.
+Gibt den \hyperref[App_Map_ViewModel_LevelChangeController]{LevelChangeController} für den Etagenwechsel zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-\texttt{LevelChangeController} für den Etagenwechsel.
+\hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController} für den Etagenwechsel.
 
 \subsubsection*{\texttt{+ getMapObjectInfoController() : IMapObjectInfoController}}\label{App_Map_ViewModel_getMapObjectInfoController}%$$$M
 \paragraph*{Beschreibung}
-Gibt den IMapObjectInfoController zurück.
+Gibt den \hyperref[App_Map_ViewModel_IMapObjectInfoController]{IMapObjectInfoController} zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
