--- a/Kapitel/02_App/03_Map/02_ViewModel/MapObjectInfoController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapObjectInfoController/main.tex
@@ -1,15 +1,15 @@
 \subsubsection{MapObjectInfoController}\label{App_Map_ViewModel_MapObjectInfoController}
 \paragraph*{Typ}
-Implementiert \texttt{IMapObjectInfoController}.
+Implementiert \hyperref[App_Map_ViewModel_IMapObjectInfoController]{IMapObjectInfoController}.
 \paragraph*{Beschreibung}
-Diese Klasse implementiert die IMapObjectInfoController Schnittstelle und bezieht die Daten 
+Diese Klasse implementiert die \hyperref[App_Map_ViewModel_IMapObjectInfoController]{IMapObjectInfoController} Schnittstelle und bezieht die Daten 
 dafür aus einem IMapDataProvider und einem IAliasDataProvider.
 
 \subsubsection*{\texttt{+ <<create>> MapObjectInfoController(dataProvider : IMapDataProvider)}}\label{App_Map_ViewModel_createMapObjectInfoController}%$$$M
 \paragraph*{Beschreibung}
-Erstellt einen neuen MapObjectInfoController.
+Erstellt einen neuen \hyperref[App_Map_ViewModel_MapObjectInfoController]{MapObjectInfoController}.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item \texttt{mapDataProvider : IMapDataProvider} IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
-    \item \texttt{aliasDataProvider : IAliasDataProvider} IAliasDataProvider von dem diese Klasse die Aliasdaten bezieht.
+    \item \texttt{mapDataProvider : IMapDataProvider} \hyperref[App_Map_Model_IMapDataProvider]{IMapDataProvider} von dem diese Klasse die Kartendaten bezieht.
+    \item \texttt{aliasDataProvider : IAliasDataProvider} \hyperref[App_AddAlias_IAliasDataProvider]{IAliasDataProvider} von dem diese Klasse die Aliasdaten bezieht.
 \end{itemize}
