--- a/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
@@ -1,10 +1,10 @@
 \subsubsection{MapDataProvider}\label{App_Map_Model_MapDataProvider}
 \paragraph*{Typ}
-Implementiert \texttt{IMapDataProvider}.
+Implementiert \hyperref[App_Map_Model_IMapDataProvider]{IMapDataProvider}.
 \paragraph*{Beschreibung}
-Diese Klasse implementiert die Fassade IMapDataProvider für die Model-Schicht der Karte.\\
+Diese Klasse implementiert die Fassade \hyperref[App_Map_Model_IMapDataProvider]{IMapDataProvider} für die Model-Schicht der Karte.\\
 Ein MapDataProvider besitzt eine Instanz der Klassen 
-TileSourceProvider, DisplayDataProvider, MapObjectInformationProvider, PositionDataManager.
+\hyperref[App_Map_Model_TileSourceProvider]{TileSourceProvider}, \hyperref[App_Map_Model_DisplayDataProvider]{DisplayDataProvider}, \hyperref[App_Map_Model_MapObjectInformationProvider]{MapObjectInformationProvider}, \hyperref[App_Map_Model_PositionDataManager]{PositionDataManager}.
 
 \paragraph*{Methoden, die an TileSourceProvider delegiert werden}
 \begin{itemize}
