--- a/Kapitel/02_App/07_Settings/Klassen/SettingsController/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsController/main.tex
@@ -80,4 +80,4 @@ Keine.
 Implementiert \texttt{ISettingsController}.
 \paragraph*{Beschreibung}
 Diese Klasse dient der Verwaltung der Einstellungen im ViewModel. \\
-Zur Durchführung der Änderungen an den Einstellungen und zum Erhalt der Daten benutzt der SettingsController ein ISettingsModel.
+Zur Durchführung der Änderungen an den Einstellungen und zum Erhalt der Daten benutzt der SettingsController ein \hyperref[App_Settings_ISettingsController]{ISettingsModel}.
