--- a/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentScreen/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentScreen/main.tex
@@ -6,7 +6,7 @@ Klasse zum Anzeigen eines Textdokuments im Markdown-Format.\\
 Diese Klasse nutzt die Funktionalität einer Markdown-Library.\\
 Das anzuzeigende Dokument wird direkt aus den Ressourcen geladen.
 Welches Dokument geladen werden soll, wird wie in Navigation beschrieben, beim Aufruf mitgegeben. 
-Dabei wird die Id des DokumentTypes verwendet.
+Dabei wird die Id des \hyperref[App_DocumentViewer_DocumentType]{DokumentTypes} verwendet.
 
 \subsubsection*{Beschreibung der Benutzeroberfläche}
 Das Dokument wird im Vollbild angezeigt.
