--- a/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentType/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentType/main.tex
@@ -14,8 +14,8 @@ Dieser Enum enthält die verschiedenen Arten von anzeigbaren Textdokumenten.
 
 \subsubsection*{\texttt{+ getId() : int}}\label{App_DocumentViewer_DocumentType_getId}%$$$M
 \paragraph*{Beschreibung}
-Gibt die Id des DokumentTypes zurück.
+Gibt die Id des \hyperref[App_DocumentViewer_DocumentType]{DokumentTypes} zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-\texttt{int}, Id des DokumentTypes.
+\texttt{int}, Id des \hyperref[App_DocumentViewer_DocumentType]{DokumentTypes}.
