--- a/Kapitel/02_App/01_Architektur/main.tex
+++ b/Kapitel/02_App/01_Architektur/main.tex
@@ -1,14 +1,14 @@
 \section{Architektur}
 Die App benutzt den Architekturstil \texttt{Model View ViewModel (MVVM)}. Dieser besteht aus drei Schichten:
 
-\paragraph*{View}
+\paragraph*{View}\label{App_View}
 Hierin befinden sich alle Klassen, die Teil der grafischen Benutzeroberfläche (GUI) sind. 
 Für die View wird primär \href{https://developer.android.com/jetpack/compose}{Jetpack Compose} benutzt. 
 Hinter der Compose-Schnittstelle kommt teilweise die \href{https://developer.android.com/reference/android/view/View}{Android View} zum Einsatz.
 
-\paragraph*{ViewModel}
+\paragraph*{ViewModel}\label{App_ViewModel}
 Hierin findet die Anzeigelogik für die View statt.
 
-\paragraph*{Model}
+\paragraph*{Model}\label{App_Model}
 Das Model ist für die Datenlogik zuständig. Ein Teil der Daten ist lokal auf dem Gerät gespeichert. 
 Ein anderer Teil befindet sich auf einem Server. Hierfür kommt im Model der Architekturstil Client-Server zum Einsatz.
