--- a/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
@@ -21,10 +21,10 @@ Es wird folgendes angezeigt:
     \item Informationen der kompakten Anzeige.
     \item Wenn es sich um einen Raum handelt: Alle zugehörigen Personen. 
     Existiert diese Information nicht, wird diese Kategorie nicht angezeigt.
-    \item Alias-Vorschläge: Es werden mehrere Alias-Vorschläge in je einer Zeile angezeigt. 
+    \item \Glspl{Alias-Vorschlag}: Es werden mehrere \Glspl{Alias-Vorschlag} in je einer Zeile angezeigt. 
     Am Ende der Zeile befinden sich ein Button mit einem Daumen nach oben und ein Button mit einem Daumen nach unten.\\
-    Gibt es keine Alias-Vorschläge wird diese Kategorie nicht angezeigt. 
-    Wird auf einen dieser Buttons geklickt, wird dies dem ViewModel mitgeteilt.
+    Gibt es keine \Glspl{Alias-Vorschlag} wird diese Kategorie nicht angezeigt. 
+    Wird auf einen dieser Buttons geklickt, wird dies dem \hyperref[App_ViewModel]{ViewModel} mitgeteilt.
     \item Globale Aliasse: Es werden globale Aliasse für dieses Kartenobjekt angezeigt.
     \begin{itemize}
         \item Gibt es sehr viele globale Aliasse, sodass die Kategorie über 3 Zeilen lang ist, werden nur 
@@ -36,7 +36,7 @@ Es wird folgendes angezeigt:
         darauf hin, dass es noch keine globalen Aliasse gibt und dass der Benutzer selbst einen vorschlagen kann.
     \end{itemize}
     Neben der Überschrift befindet sich auf der rechten Seite ein Button, auf dem \dq{}Vorschlagen\dq{} oder ein gleichbedeutendes Symbol steht.
-    Wird auf diesen Button geklickt, wird dies dem ViewModel mitgeteilt.
+    Wird auf diesen Button geklickt, wird dies dem \hyperref[App_ViewModel]{ViewModel} mitgeteilt.
     \item Lokale Aliasse: Es werden lokale Aliasse für dieses Kartenobjekt angezeigt. 
     \begin{itemize}
         \item Gibt es sehr viele lokale Aliasse, sodass die Kategorie über 3 Zeilen lang ist, werden nur 
@@ -52,7 +52,7 @@ Es wird folgendes angezeigt:
         Klickt der Benutzer auf einen der angezeigten lokalen Aliasse und hält diesen für mindestens eine 
         Sekunde gedrückt, erscheint eine Meldung, ob der Benutzer den ausgewählten lokalen Alias wirklich 
         löschen möchte. Es gibt die Auswahlmöglichkeiten \dq{}Abbrechen\dq{} und \dq{}Bestätigen\dq{}.\\ 
-        Wird auf \dq{}Bestätigen\dq{} geklickt, wird dies dem ViewModel mitgeteilt und die Meldung schließt sich.\\
+        Wird auf \dq{}Bestätigen\dq{} geklickt, wird dies dem \hyperref[App_ViewModel]{ViewModel} mitgeteilt und die Meldung schließt sich.\\
         Wird auf \dq{}Abbrechen\dq{} geklickt, oder die Zurück-Taste (des Endgeräts) betätigt, schließt sich die Meldung ebenfalls.
     \end{itemize}
     Neben der Überschrift befindet sich auf der rechten Seite ein Button auf dem \dq{}Hinzufügen\dq{} oder ein gleichbedeutendes Symbol steht. 
@@ -90,7 +90,7 @@ In beiden Fällen gibt es die gleiche Animation: Die kompakte Anzeige verschwind
 
 \paragraph*{Parameter}
 \begin{itemize}
-    \item \texttt{controller : IMapObjectInfoController} IMapObjectInfoController von dem diese Klasse ihre Daten bezieht.
+    \item \texttt{controller : \hyperref[App_Map_ViewModel_IMapObjectInfoController]{IMapObjectInfoController}} \hyperref[App_Map_ViewModel_IMapObjectInfoController]{IMapObjectInfoController} von dem diese Klasse ihre Daten bezieht.
 \end{itemize}
 
 \subsubsection*{Bilder}\label{App_Map_View_MapObjectInfoDisplay_Bilder}
