--- a/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
@@ -9,13 +9,13 @@ Kartenansicht verantwortlich (z.B. wenn ein Gebäude über die Suche gefunden wu
 Insbesondere muss diese Klasse Eintritte in die Kartenansicht verarbeiten, bei denen ein Raum vom Benutzer angefordert wurde, 
 der nicht in der App existiert (aber das zugehörige Gebäude existiert). In diesem Fall soll \texttt{getRoomError()} gesetzt 
 werden und das Gebäude fokussiert werden.\\
-Diese Information, was fokussiert werden soll, ist durch den Wechsel zwischen Ansichten durch den NavHost und NavGraph verfügbar (siehe Navigation).
+Diese Information, was fokussiert werden soll, ist durch den Wechsel zwischen Ansichten durch den NavHost und NavGraph verfügbar (siehe \hyperref[App_Navigation]{Navigation}).
 
 \subsubsection*{\texttt{+ <<create>> MapController(dataProvider : IMapDataProvider)}}\label{App_Map_ViewModel_createMapController}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erstellt einen neuen MapController.
 \paragraph*{Beschreibung}
-Erstellt einen neuen LevelModeController, einen BuildingModeController und einen IMapObjectInfoController.
+Erstellt einen neuen \hyperref[App_Map_ViewModel_LevelModeController]{LevelModeController}, einen \hyperref[App_Map_ViewModel_BuildingModeController]{BuildingModeController} und einen \hyperref[App_Map_ViewModel_IMapObjectInfoController]{IMapObjectInfoController}.
 \paragraph*{Parameter}
 \begin{itemize}
     \item \texttt{dataProvider : IMapDataProvider} IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
