--- a/Kapitel/02_App/03_Map/02_ViewModel/MapLayerDataController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapLayerDataController/main.tex
@@ -6,14 +6,14 @@ Dieses Interface definiert eine Schnittstelle, die Daten für eine Kartenebene b
 Implementierende Klassen können von einem Beobachter beobachtet werden. Dazu werden die 
 Daten für die Karte als LiveData-Objekte herausgegeben.\\
 Außerdem wird die Änderung dieser Daten spezifiziert, wenn ein Objekt ausgewählt wird, dessen
-Daten im MapLayerDataController verwaltet werden.
+Daten im \hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController} verwaltet werden.
 
 \subsubsection*{\texttt{+ selectMapObject(mapId : int)}}\label{App_Map_ViewModel_selectMapObject}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode fokussiert das richtige Element, nachdem ein Kartenobjekt ausgewählt wurde.
 \paragraph*{Beschreibung}
 Diese Methode wird aufgerufen, wenn ein Kartenobjekt vom Benutzer ausgewählt wird, dessen 
-Daten von diesem MapLayerDataController verwaltet werden.\\
+Daten von diesem \hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController} verwaltet werden.\\
 Diese Methode kümmert sich um die Fokussierung des richtigen Kartenobjekts. Eventuell muss 
 aus oder in die Etagenansicht gewechselt werden.
 \paragraph*{Parameter}
