--- a/Kapitel/02_App/03_Map/03_Model/DisplayDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/DisplayDataProvider/main.tex
@@ -10,13 +10,13 @@ Gibt die Anzeigedaten für alle Gebäude zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-\texttt{LiveData<List<DisplayData>>}, DisplayData für alle Gebäude.
+\texttt{LiveData<List<DisplayData>>}, \hyperref[App_Map_Util_DisplayData]{DisplayData} für alle Gebäude.
 
 \subsubsection*{\texttt{+ getRoomDisplayData(mapId : int, level : int) : LiveData<List<DisplayData>>}}\label{App_Map_Model_getRoomDisplayData_Display}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Anzeigedaten für Räume einer Etage zurück.
 \paragraph*{Beschreibung}
-Gibt DisplayData-Objekte zu allen Räumen einer Etage eines Gebäudes zurück.\\
+Gibt \hyperref[App_Map_Util_DisplayData]{DisplayData}-Objekte zu allen Räumen einer Etage eines Gebäudes zurück.\\
 Die Liste ist leer, wenn es keine hinterlegten Räume gibt.
 \paragraph*{Parameter}
 \begin{itemize}
@@ -24,4 +24,4 @@ Die Liste ist leer, wenn es keine hinterlegten Räume gibt.
     \item \texttt{level : int} Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
-\texttt{LiveData<List<DisplayData>>}, DisplayData für Räume einer Etage.
+\texttt{LiveData<List<DisplayData>>}, \hyperref[App_Map_Util_DisplayData]{DisplayData} für Räume einer Etage.
