--- a/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
@@ -3,11 +3,11 @@
 \texttt{Composable}.
 \paragraph*{Beschreibung}
 Dieses \texttt{Composable} zeigt die Einstellungen an. 
-Der Benutzer kann die Einstellungen durch Interaktion mit dem SettingsScreen festlegen und ändern.\\
-Der SettingsScreen besitzt einen ISettingsController, der die Daten bereitstellt und die Änderungen an den Einstellungen durchführt. 
+Der Benutzer kann die Einstellungen durch Interaktion mit dem \hyperref[App_Settings_SettingsScreen]{SettingsScreen} festlegen und ändern.\\
+Der \hyperref[App_Settings_SettingsScreen]{SettingsScreen} besitzt einen \hyperref[App_Settings_ISettingsController]{ISettingsController}, der die Daten bereitstellt und die Änderungen an den Einstellungen durchführt. 
 
 \paragraph*{Aufbau}
-Der SettingsScreen zeigt folgende Einstellungs-Möglichkeiten untereinander an:
+Der \hyperref[App_Settings_SettingsScreen]{SettingsScreen} zeigt folgende Einstellungs-Möglichkeiten untereinander an:
 \begin{itemize}
     \item Anmelde-Schaltfläche: Ist der Benutzer nicht angemeldet, wird angezeigt, dass er sich anmelden kann. 
     Klickt der Benutzer auf diese Schaltfläche, zeigt die App die Anmeldung an.\\
