--- a/Kapitel/02_App/10_DataStorage/Daten/Ressourcen/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/Ressourcen/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{Ressourcen}\label{App_DataManagement_Ressourcen}
 Zum Speichern von Ressourcen werden die \href{https://developer.android.com/reference/android/content/res/Resources}
-{Resources} verwendet. Auf diese darf der Zugriff außerhalb des Models geschehen. Ressourcen können nur gelesen werden.\\
+{Resources} verwendet. Auf diese darf der Zugriff außerhalb des \hyperref[App_Model]{Models} geschehen. Ressourcen können nur gelesen werden.\\
 Folgende Ressourcen sind gespeichert:
 \begin{itemize}
     \item Anzeige-Strings: Alle Zeichenketten, die in der App angezeigt werden, 
