--- a/Kapitel/00_Backend/Security/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/Beschreibung/main.tex
@@ -27,6 +27,7 @@ im Resolver überprüft werden, ob der SecurityContext die benötigte Authoritä
 			Wrapper-Klasse für gegebene Authoritäten.
 \end{itemize}
 
+\newpage
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{\currfiledir Security}
