--- a/Kapitel/00_Backend/Services/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/Beschreibung/main.tex
@@ -21,6 +21,7 @@ zugrundeliegende Repositoryklasse um ihre Methoden umzusetzen.
     \item MapIDServiceImp
 \end{itemize}
 
+\newpage 
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{\currfiledir Services}
