--- a/Kapitel/02_App/03_Map/01_View/TileMarkerOverlay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/TileMarkerOverlay/main.tex
@@ -17,7 +17,7 @@ Für die Verwaltung dieser Overlays wird das FolderOverlay eingesetzt.\\
 Diese Klasse verwaltet die \hyperref[App_Map_View_MapObjectMarker]{MapObjectMarkern}, die Aktion beim Klicken auf diese Marker, 
 und das Fokussieren eines dieser Marker.
 
-\subsubsection*{\texttt{+ <<create>> \hyperref[App_Map_View_TileMarkerOverlay]{TileMarkerOverlay}(controller : \hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController}, mapView : MapView)}}%$$$M
+\subsubsection*{\texttt{+ <<create>> TileMarkerOverlay(controller : MapLayerDataController, mapView : MapView)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erstellt eine \hyperref[App_Map_View_TileMarkerOverlay]{TileMarkerOverlay}-Instanz.
 \paragraph*{Beschreibung}
@@ -25,7 +25,7 @@ Beginnt die von controller bereitgestellten Daten zu beobachten. Erzeugt das Til
 Erzeugt die \hyperref[App_Map_View_MapObjectMarker]{MapObjectMarkern} über die Fabrikmethode createMarker.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item \texttt{controller : \hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController}} \hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataController} der die Daten bereitstellt.
+    \item \texttt{controller : MapLayerDataController} MapLayerDataController der die Daten bereitstellt.
     \item \texttt{mapView : MapView} MapView auf der sich das Overlay befindet.
 \end{itemize}
 
@@ -52,7 +52,7 @@ Teilt dem \hyperref[App_Map_ViewModel_MapLayerDataController]{MapLayerDataContro
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{\texttt{\# createMarker(data : \hyperref[App_Map_Util_DisplayData]{DisplayData}, mapView : MapView) : \hyperref[App_Map_View_MapObjectMarker]{MapObjectMarkern} $\lbrace$abstract$\rbrace$}}%$$$M
+\subsubsection*{\texttt{\# createMarker(data : DisplayData, mapView : MapView) : MapObjectMarkern $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
 Dies ist eine Fabrikmethode zur Erzeugung eines \hyperref[App_Map_View_MapObjectMarker]{MapObjectMarkern}.
 \paragraph*{Parameter}
@@ -81,7 +81,7 @@ Erbt von \hyperref[App_Map_View_TileMarkerOverlay]{TileMarkerOverlay}.
 \paragraph*{Beschreibung}
 Diese Klasse ist ein \hyperref[App_Map_View_TileMarkerOverlay]{TileMarkerOverlay} für die Gebäudeebene auf der Karte.
 
-\subsubsection*{\texttt{\# createMarker(data : \hyperref[App_Map_Util_DisplayData]{DisplayData}) : \hyperref[App_Map_View_MapObjectMarker]{MapObjectMarkern}}}%$$$M
+\subsubsection*{\texttt{\# createMarker(data : DisplayData) : MapObjectMarkern}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erzeugt einen \hyperref[App_Map_View_BuildingMarker]{BuildingMarker} mit den gegeben Daten.
 \paragraph*{Beschreibung}
@@ -104,7 +104,7 @@ Erbt von \hyperref[App_Map_View_TileMarkerOverlay]{TileMarkerOverlay}.
 \paragraph*{Beschreibung}
 Diese Klasse ist ein \hyperref[App_Map_View_TileMarkerOverlay]{TileMarkerOverlay} für die Etagenebene auf der Karte.
 
-\subsubsection*{\texttt{\# createMarker(data : \hyperref[App_Map_Util_DisplayData]{DisplayData}) : \hyperref[App_Map_View_MapObjectMarker]{MapObjectMarkern}}}%$$$M
+\subsubsection*{\texttt{\# createMarker(data : DisplayData) : MapObjectMarkern}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erzeugt einen \hyperref[App_Map_View_RoomMarker]{RoomMarker} mit den gegeben Daten.
 \paragraph*{Beschreibung}
