--- a/Kapitel/02_App/03_Map/02_ViewModel/BuildingModeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/BuildingModeController/main.tex
@@ -6,7 +6,7 @@ Diese Klasse steuert die Gebäudeebene auf der Karte. Sie stellt alle benötigte
 Sie stellt alle benötigten Aufrufe bereit, um Interaktionen mit Gebäuden zu verarbeiten.\\
 Diese Klasse beobachtet den Wert \texttt{+ isLevelMode() : LiveData<boolean>} des \hyperref[App_Map_ViewModel_LevelModeController]{LevelModeControllers}.
 
-\subsubsection*{\texttt{+ <<create>> BuildingModeController(dataProvider : \hyperref[App_Map_Model_IMapDataProvider]{IMapDataProvider}, levelController : \hyperref[App_Map_ViewModel_LevelModeController]{LevelModeController})}}%$$$M
+\subsubsection*{\texttt{+ <<create>> BuildingModeController(dataProvider : IMapDataProvider, levelController : LevelModeController)}}%$$$M
 \paragraph*{Beschreibung}
 Erstellt einen neuen BuildingModeController.
 \paragraph*{Parameter}
