Fix order of document

--- a/Kapitel/05_CICD/00_Beschreibung/main.tex
+++ b/Kapitel/05_CICD/00_Beschreibung/main.tex
@@ -1,2 +1,2 @@
-Im Rahmen dieses Projektes wird Continuos Integration/Development (CI/CD) eingesetzt.
+Im Rahmen dieses Projektes wird Continuous Integration/Development (CI/CD) eingesetzt.
 Dies kann auf beliebigen Plattformen umgesetzt werden, jedoch geschieht dies zentral auf einem Server.
