--- a/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
@@ -59,6 +59,10 @@ Es wird folgendes angezeigt:
     Wird auf diesen geklickt, wechselt die App in den Screen zum Hinzufügen eines lokalen Aliasses.
 \end{itemize}
 Kann der gesamte Inhalt der ausführlichen Anzeige nicht auf einem Bildschirm angezeigt werden, erlaubt sie es zu scrollen.
+\paragraph{Kriterien}
+MK90, MK91, MK92, MK93, MK94
+\paragraph{Funktionale Anforderungen}
+FA80
 
 \paragraph*{Wechsel zwischen Anzeigen}
 \subparagraph*{Wechsel von kompakter in ausführliche Anzeige}
