--- a/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
@@ -39,6 +39,10 @@ Und veranlasst das Anzeigen des Kartenobjekts zu dem ausgewählten Suchvorschlag
 \end{itemize}
 \paragraph*{Rückgabewert}
 \texttt{Void}.
+\paragraph{Kriterien}
+MK10, MK20, MK30
+\paragraph{Funktionale Anforderungen}
+FA40
 
 \subsubsection*{\texttt{+ onClickEnter}}\label{App_Search_SearchScreen_onClickEnter}%$$$M
 \paragraph*{Kurzbeschreibung}
