--- a/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
@@ -32,6 +32,8 @@ Der \hyperref[App_Settings_SettingsScreen]{SettingsScreen} zeigt folgende Einste
     \item Hilfe anzeigen: Wird auf diese Schaltfläche geklickt, wechselt die App in die Dokumentenansicht und zeigt dort eine Hilfeseite an.
     \item Lizenzen anzeigen: Wird auf diese Schaltfläche geklickt, wechselt die App in die Dokumentenansicht und zeigt dort Open-Source-Lizenzen der App an.
 \end{itemize}
+\paragraph{Funktionale Anforderungen}
+FA50, FA52, FA53, FA54, FA55, FA56, FA57
 
 \subsubsection*{Bilder}\label{App_Settings_SettingsScreen_Bilder}
 \begin{minipage}{\linewidth}
