--- a/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
@@ -23,6 +23,10 @@ der AddAliasScreen einen \hyperref[App_AddAlias_IAddAliasController]{IAddAliasCo
     aus dem Textfeld gelöscht. Der Screen zeigt in jedem Fall eine Meldung zum Erfolg bez. Misserfolg der Aktion an.
     \item Darunter werden für dieses Kartenobjekt bereits existierende globale Aliasse angezeigt.
 \end{itemize}
+\paragraph{Kriterien}
+MK50
+\paragraph{Funktionale Anforderungen}
+FA70, FA80
 
 \subsubsection*{Bilder}\label{App_AddAlias_AddAliasScreen_Bilder}
 \begin{minipage}{\linewidth}
