--- a/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
@@ -26,6 +26,10 @@ Der SignInScreen ist folgendermaßen aufgebaut:
     Ist die Anmeldung beim Anmeldedienst abgeschlossen, wird in einer Meldung angezeigt, in der angezeigt wird, ob die Anmeldung erfolgreich war.\\
     War die Anmeldung erfolgreich wird diese Ansicht nach bestätigen der Meldung geschlossen.
 \end{itemize}
+\paragraph{Kriterien}
+MK40
+\paragraph{Funktionale Anforderungen}
+FA60
 
 \subsubsection*{Bilder}\label{App_Signup_Klassen_SignInScreen_Bilder}
 \begin{minipage}{\linewidth}
